# discrete-events

./: Makefile  README.md  pyproject.toml  requirements.txt
discrete_events/: __init__.py  __main__.py  random_variables.py  simulation.py
tests/: test_discrete_events.py
