[tool.poetry]
name = "discrete-events"
version = "0.1.0"
description = ""
authors = ["Adrian Portales <adrianportales135@gmail.com>"]

[tool.poetry.dependencies]
python = "~3.8"
numpy = "^1.21.4"
pandas = "^1.3.4"
typer = "^0.4.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
